See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.85.00

              pamtris: Add -rgb, -grayscale.  Add w parameter to vertex
              instructions.  Fix perspective correctness.  Thanks Lucas Brunno
              Luna <lucaslunar32@hotmail.com>.

              libnetpbm: Fix invalid memory reference in color name processing
              when trivial memory allocation fails.

              pamtojpeg2k: fix incorrect interpretation of -ilyrrates option
              when it contains multiple delimiter characters in a row.  Always
              broken (pamtojpeg2k was new in Netpbm 10.12 (November 2002)).

              pnmtojbig: fix incorrect handling of -x option.  Always broken
              (pnmtojbig was new in Netpbm 9.2 (May 2000)).

              pjtoppm, pbmtoppa: fix arithmetic overflow.

              Build: fix reference to nonexistent getline on Mac OS X 10.6.

              Build: fix reference to nonexistent strndup on Mac OS X 10.6.

18.09.29 BJH  Release 10.84.00

              Add pamaltsat.  Thanks Anton Shepelev <anton.txt@gmail.com>.

              Add pamtris.  Thanks Lucas Brunno Luna
              <lucaslunar32@hotmail.com>.

              libpbmfont, pbmtext: fix bugs with BDF file lines with
              insufficient number of fields.  Unknown effect.

              pbmtext: -wchar works with built-in fonts.

              pbmtext: improved -verbose information about BDF fonts:
              include CHARSET_REGISTRY, CHARSET_ENCODING.

              libnetpbm font facilities: built-in fonts work with wide
              characters.

              pbmtext; libnetpbm BDF font processing: fix invalid memory
              reference when BDF font file has invalid syntax.  Broken
              in primordial Netpbm, ca 1993.

              pamgetcolor: fix bug: gets color of only the top half of a
              region.
